@@ -125,6 +125,11 @@ Voicemail Changes
   * Added support for storage of greetings using an IMAP server
   * Added ability to customize forward, reverse, stop, and pause keys for message playback
   * SMDI is now enabled in voicemail using the smdienable option.
+  * A "lockmode" option has been added to asterisk.conf to configure the file
+     locking method used for voicemail, and potentially other things in the
+	 future.  The default is the old behavior, lockfile.  However, there is a
+	 new method, "flock", that uses a different method for situations where the
+	 lockfile will not work, such as on SMB/CIFS mounts.
 
 Queue changes
 -------------
